[gd_scene load_steps=3 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level/Level.gd" type="Script" id=3]

[node name="Level" type="Node"]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 25 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( -16, -25 )
current = true

[node name="StartPositions" type="Node" parent="."]

[node name="CarStart1" type="Position2D" parent="StartPositions"]
position = Vector2( -43, 199 )

[node name="CarStart2" type="Position2D" parent="StartPositions"]
position = Vector2( 1062, 47 )

[node name="CarStart3" type="Position2D" parent="StartPositions"]
position = Vector2( -35, 471 )

[node name="CarStart4" type="Position2D" parent="StartPositions"]
position = Vector2( 1058, 367 )

[node name="CarStart5" type="Position2D" parent="StartPositions"]
position = Vector2( 1048, 558 )

[node name="CarTimers" type="Node" parent="."]

[node name="Timer1" type="Timer" parent="CarTimers"]
wait_time = 2.0
autostart = true

[node name="Timer2" type="Timer" parent="CarTimers"]
wait_time = 2.0
autostart = true

[node name="Timer3" type="Timer" parent="CarTimers"]
wait_time = 2.0
autostart = true

[node name="Timer4" type="Timer" parent="CarTimers"]
wait_time = 2.0
autostart = true

[node name="Timer5" type="Timer" parent="CarTimers"]
wait_time = 2.0
autostart = true

[node name="PlayerSytartPos" type="Position2D" parent="."]
position = Vector2( 622, 453 )

[connection signal="timeout" from="CarTimers/Timer1" to="." method="_on_Timer1_timeout"]
[connection signal="timeout" from="CarTimers/Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="CarTimers/Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="CarTimers/Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="CarTimers/Timer5" to="." method="_on_Timer5_timeout"]
